--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,81 @@
-.video {
-  width: 100%;
-  height: 100%;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #fff;
 }
 
-.container-fluid {
+.hero-image {
+  background-image: url("../img/walpaper.jpg");
+  background-color: #cccccc;
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
 }
-.emeezurag {
-  border-radius: 5px;
+.dark-way {
+  width: 100%;
+  height: 100%;
   position: absolute;
-  width: 20rem;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+}
 
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.emeeNer {
-  position: absolute;
-  width: 30rem;
-  height: auto;
-  color: white;
-  font-size: 3rem;
+.hero-text {
   text-align: center;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.emeeTobch {
   position: absolute;
-  width: 20rem;
-  height: auto;
-  text-transform: uppercase;
-  top: 65%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: white;
+}
+.img1 {
+  border-top-left-radius: 20%;
+  border-bottom-right-radius: 20%;
+  height: 40rem;
+  width: 30rem;
+  border: 3px solid orange;
+}
+h1 {
+  font-weight: 300;
+  font-size: 4rem;
+  text-transform: uppercase;
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+@media screen and (max-width: 1200px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
+
+button {
+  background-color: orange;
+  border: none;
+  border-radius: 10px;
+}
+
+button a {
+  color: #fff;
+  font-size: 2rem;
+  text-align: center;
+  padding: 2.5rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+button a:hover {
+  text-decoration: none;
+}
+@media screen and (max-width: 1200px) {
+  button a {
+    font-size: 1.3rem;
+    padding: 1.5rem, 2rem;
+    text-decoration: none;
+  }
 }
