--- a/banzragch/banzragch.css
+++ b/banzragch/banzragch.css
@@ -27,7 +27,7 @@
   width: 100%;
 }
 .jumbotron {
-  background-image: url("../img/zurag5.jpg");
+  background-image: url("../img/banzragch/gerbul2.jpg");
   height: 1000px;
   background-position: center;
   background-repeat: no-repeat;
